# gpstracker

./: CMakeLists.txt  clangCMakeLists.txt  cmdparam.c  devices.c  devices.h  gpstracker.kdev4  main.c  settings.c  settings.h  sockutils.c  threadFunc.c
.kdev4/: gpstracker.kdev4
devices/: fm1100.c  fm4xxx.conf  tr151.c  tr151.conf
